# simpleton

./: AGENT_METRICS.md  BENCHMARKS.md  IMPLEMENTATION_PLAN.local.md  Makefile  PROBLEM_SPECIALIZATION.md  README.md  push-files.ps1
.github/workflows/: build-backend.yml
backend/: .env.example  =6.0.0  Dockerfile  README.md  create_conversations.sql  main.py  pyproject.toml
backend/agents/: generator.py  latex_agent.py
backend/api/: routes.py
backend/auth/: models.py  routes.py  session.py  utils.py
backend/cache_redis/: cache.py  client.py  rate_limiter.py
backend/db/: client.py  models.py  queries.py  schema.sql  schema_conversations.sql  users.py  versions.py
backend/db/migrations/: 001_create_conversations_table.sql
backend/graph/: nodes.py  state.py
backend/migrations/: 001_create_conversations.sql  001_create_users.sql  002_create_document_versions.sql
backend/models/: compile_models.py  generate_models.py
backend/scripts/: create_conversations.py
backend/services/: files.py  llm_service.py  storage.py
backend/tasks/: __init__.py  celery_app.py  compile.py
backend/tools/: compiler.py  latex_tools.py
frontend/: README.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/app/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/components/: AgentPanel.tsx  DocTypeCarousel.tsx  DotIcon.tsx  HowItWorks.tsx  Sidebar.tsx  StorySection.tsx
frontend/src/lib/: api.ts  auth.tsx
(+4 files in other folders)
