[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "celery>=5.6.2",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "google-genai>=1.66.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.12",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.2",
    "pandas>=3.0.3",
    "psutil>=6.0.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "supabase>=2.28.2",
    "upstash-redis>=1.7.0",
    "uvicorn>=0.41.0",
]
